# data-universe-2022

./: .gitignore  .pre-commit-config.yaml  .yamllint  Makefile  README.md  pyproject.toml
src/: example.yaml  main.py
tests/: test_main.py
